--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,6 +106,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src"], // which files to compile
+  "include": ["src", "src/app/interface/index.d.ts"], // which files to compile
   "exclude": ["node_modules", "dist"] // which files to skip
 }
