--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "@vercel/node": "^5.1.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.0",
